# tomcat-starter

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
src/: App.vue  backendApi.ts  backendApiMockImpl.ts  idGeneration.ts  main.ts
src-core/: Cargo.toml
src-core/src/: config_manger.rs
src-core/src/domain/: config.rs  platform.rs  property.rs  server.rs  tasks.rs
src-core/src/service/: mod.rs  service.rs  task_copy_random.rs
src-core/tests/: task_copy_random_test.rs
src-tauri/: tauri.conf.json
src-tauri/src/: application.rs  config_manger.rs  lib.rs  main.rs
src-tauri/src/domain/: config.rs  mod.rs  platform.rs  property.rs  release.rs  server.rs  tasks.rs
src-tauri/src/service/: service.rs  task_copy_random.rs
src-tauri/tests/: task_copy_random_test.rs
src/components/settings/: Dashboard.vue  EditCopyWarToRandomDir.vue  EditRunTomcat.vue  EditUnit.vue  FormWrapper.vue  PropertyRow.vue  ServerInstances.vue  Settings.vue  intentionTask.ts  validationRules.ts
src/domain/: commonShape.ts  config.ts  platform.ts  property.ts  release.ts  server.ts  taskTemplate.ts
src/hash/: hashUtils.ts  hashable.ts
